# SmashImpact

./: .babelrc  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  Agent.md  BUG_REPORT.md  BUG_REPORT_COMPLETE.md  BUG_REPORT_FINAL.md  BUILD.md  CLEANUP_SUMMARY.md  COMPATIBILITY.md  CONTEXT-RULES.md  DEPLOY.md  DESIGN-SYSTEM.json  EMBIND_FIX_SUMMARY.md  GITHUB_ACTION_FIX.md  Makefile  PROJECT-OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  SETUP_INSTRUCTIONS.md  UI_BUGS_REPORT.md  WASM_API.md  WASM_BUILD_FIX.md  WASM_BUILD_SUMMARY.md  WASM_ERROR_HANDLING.md  WASM_REFACTORING_GUIDE.md  _config.yml  browser-compat.js  build-quick.sh  build.sh  build_wolf_ai.sh  compile-enhanced-combat.sh  connect.html  control-config.js  docker-compose.yml  dungeon-conversion.js  enhanced-3d-tiles.js  (+103 more)
.github/workflows/: README.md  build-optimized.yml  build-wasm.yml  deploy-pages.yml  performance-check.yml  test-matrix.yml  test.yml  update-cache.yml  wasm-build.yml
assets/sprites/: hero-placeholder.html  hero-spritesheet.json  hero.png.html
coverage/: cobertura-coverage.xml  index.html
coverage/lcov-report/: index.html
coverage/lcov-report/tests/: globalSetup.js.html  globalTeardown.js.html  index.html  setup.js.html  test-game.js.html  wolf-ai-tests.js.html
coverage/src/ai/: advanced-enemy-ai.js.html  index.html  wolf-ai.js.html  wolf-integration-fix.js.html  wolf-integration-modular.js.html  wolf-integration.js.html
coverage/src/core/: EventBus.js.html  GameState.js.html  index.html  movement-config.js.html
coverage/src/debug/: debug-panel.js.html  index.html
coverage/src/game/: control-config.js.html  dungeon-conversion.js.html  fix-walkability.js.html  game-core.js.html  game-loop.js.html  index.html  input-handler.js.html  renderer.js.html  ui-manager.js.html  visual-effects.js.html  visual-improvements.js.html  wasm-loader.js.html
coverage/src/multiplayer/: index.html  multiplayer-backup.js.html  multiplayer.js.html
coverage/src/testing/: balance-config.js.html  index.html  (+1 more)
coverage/tests/: globalSetup.js.html  globalTeardown.js.html  index.html  setup.js.html  test-game.js.html  wolf-ai-tests.js.html
docs/: BUG_REPORT_COMPLETE.md  GITHUB_ACTIONS_OPTIMIZATION.md  MOVEMENT_FIXES.md  WASM_API.md  WASM_BUILD_GUIDE.md  WASM_README.md  fix-visual-effects.patch  wolf-demo-created.txt
public/: REFACTORING_SUMMARY.md  combat-wasm-adapter.js  enhanced-combat-game.js  game-backup.html  game-combat.html  game-engine-loader.js  game-engine-wrapper.js  game-merged.html  game-new.html  game-old.html  game-original.html  game-wolf-modular-fixed.html  game-wolf-modular.html  game-wolf-wasm.html  game-wolf.html  game.html  game_engine.js  game_engine.wasm  game_engine_wrapper.js  index-wasm.html  index.html  input-handler.js  isometric-game.js  menu.html  mobile-controls.js  mobile-orientation.js  mobile-wasm-bridge.js  multiplayer.js  performance-comparison.html  player-sprite-demo.html  renderer.js  sprite-loader.js  sw.js  targeting-button.js  targeting-controls.js  test-game.html  test-module-loading.html  test-orientation.html  test-roll-distance.html  test-script-loading.html  (+24 more)
public/assets/: README.md  generate-player-sprite.html  player-sprite-config.json  player-sprites-data.js
public/css/: game-styles.css  main.css  mobile.css  ui.css
public/js/: game-modes.js  game-state.js  game.js  mobile-controls.js  ui-manager.js
scripts/: ci-build.sh  update-cache-version.sh  wasm-build-helper.sh  wasm-build-monitor.py
src/: main.js
src/ai/: advanced-enemy-ai.js  wolf-ai.js  wolf-integration-fix.js  wolf-integration-modular.js  wolf-integration.js
src/config/: game.config.js
src/core/: EventBus.js  GameState.js  movement-config.js
src/debug/: debug-panel.js
src/game/: ai.js  enemy-ai.js  fix-walkability.js  game-core.js  game-loop.js  heroes.js  input-handler.js  levels.js  obstacles.js  powerups.js  renderer.js  sprite-loader.js  sprite-manager.js  squad-director.js  state.js  styles.css  ui-manager.js  visual-effects.js  wasm-loader.js
src/multiplayer/: connect.html  multiplayer-backup.js  multiplayer.js
src/net/: codec.js  webrtc.js
src/testing/: balance-config.js  metrics-collector.js  test-framework.js
src/ui/: qr.js
src/utils/: dom.js  time.js
test-results/: junit.xml  summary.json  test-report.html
tests/: globalSetup.js  globalTeardown.js  run-balance-tests.js  setup.js  test-controls.html  test-fixes.html  test-game.js  wolf-ai-tests.js  wolf-state-machine-tests.js
tests/wasm/: test-runner.html  wasm-unit-tests.js
wasm/: CMakeLists.txt  build-cmake.sh  build-debug.sh  build-enhanced-combat.sh  build-improved.sh  build.sh  enhanced_combat_engine.cpp  game_engine.cpp  game_engine_monolithic.cpp  game_engine_original.cpp  game_engine_refactored.cpp  migrate-to-modular.sh  simple_game_engine.cpp  wolf_ai.js
wasm/include/: game_engine.h
wasm/include/ai/: wolf_ai.h
wasm/include/config/: game_config.h
wasm/include/effects/: particle.h  visual_effects.h
wasm/include/entities/: enemy.h  entity.h  obstacle.h  player.h  powerup.h  projectile.h  wolf.h
wasm/include/math/: vector2.h  vector2_simd.h
wasm/include/memory/: object_pool.h
wasm/include/systems/: collision_system.h  physics_system.h  spatial_hash_grid.h  wave_system.h
wasm/include/utils/: error_handler.h  performance_monitor.h
wasm/src/: bindings.cpp  entity.cpp  game_engine.cpp
wasm/src/ai/: wolf_ai.cpp
wasm/src/effects/: particle_system.cpp  visual_effects.cpp
wasm/src/entities/: enemy.cpp  obstacle.cpp  player.cpp  powerup.cpp  projectile.cpp  wolf.cpp
wasm/src/math/: vector2_simd.cpp
wasm/src/memory/: object_pool.cpp
wasm/src/systems/: collision_system.cpp  physics_system.cpp  spatial_hash_grid.cpp  wave_system.cpp
wasm/src/utils/: performance_monitor.cpp
(+62 files in other folders)
